# EnzymePy

./: .gitignore  README.md  pyproject.toml  setup.py
enzymepy/: chemdata.py  reaction.py  utils.py
enzymepy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
enzymepy/data/: synonyms.json
src/enzymepy/: chemdata.py  reaction.py  utils.py
src/enzymepy/data/: BrendaIDwithCid_duplicated.pkl  __init__.py
