[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel", "nltk", "rdkit", "tqdm","pubchempy"]
build-backend = "setuptools.build_meta"
[project]
name = "enzymepy"
version = "0.0.1"
authors = [
  { name="Edward Zhou", email="teddy_chou@outlook.com" },
]
description = "A small package for chemical data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"